# Hackathon-01

./: .gitignore  README.md  book.yaml  package.json
.gemini/commands/: sp.constitution.toml
.github/workflows/: pages.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
ai-interactive-textbook/: .npmignore  docusaurus.config.ts  sidebars.ts  tsconfig.json
ai-interactive-textbook/docs/: 02-introduction-to-physical-ai-and-embodied-intelligence.md  03-ros-2-fundamentals.md  04-gazebo-simulation-and-unity-visualization.md  08-hardware-requirements-and-lab-setup.md  09-cloud-native-lab-architecture.md  10-edge-kits-digital-twin-and-robot-options.md  intro.md  welcome.md
backend/: agent.py  embeddings.py  knowledge_loader.py  main.py  my_config.py  pyproject.toml  requirements.txt  resetdb.py  retrieval.py  vercel.json
backend/auth/: auth.py  db.py  models.py  schemas.py
backend/src/: intelligence.py
backend/src/services/: translation.py
book/ai-interactive-textbook/: docusaurus.config.ts  package.json
frontend/: index.html
specs/003-ai-agent-backend/: tasks.md
specs/004-chatbot-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-user-personalization-and-translation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-contact-and-onboarding-forms/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-ai-interactive-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-ai-native-textbook/: data-model.md  plan.md  (+4 more)
(+73 files in other folders)
